--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,6 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
 android.useAndroidX=true
+android.suppressUnsupportedCompileSdk=36
+kotlin.incremental=false
+kotlin.compiler.execution.strategy=in-process
